--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@fortawesome/angular-fontawesome": "^0.1.1",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "yarn": "^1.7.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
