--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "ng-sidebar": "^7.2.1",
     "rxjs": "^6.0.0",
     "yarn": "^1.7.0",
